test/fail/actor-reference-empty.mo
// actor references

let _ = actor "ic:";  // empty principal
